@@ -306,9 +306,9 @@ extern TCHAR *g_szDeploymentStatus[];
 extern COLORREF g_statusColorTable[];
 extern char *g_szObjectClass[];
 extern char *g_szInterfaceTypes[];
-extern char *g_pszItemOrigin[];
-extern char *g_pszItemOriginLong[];
-extern char *g_pszItemDataType[];
+extern TCHAR *g_pszItemOrigin[];
+extern TCHAR *g_pszItemOriginLong[];
+extern TCHAR *g_pszItemDataType[];
 extern char *g_pszItemStatus[];
 extern char *g_pszThresholdOperation[];
 extern char *g_pszThresholdOperationLong[];
